tests/NormalTests/paczka1/small_fuzzy/47901168.err
Error in line 2: zT02YSxQL S906 16,2
Error in line 4: zT02YSxQL S444 74,4
Error in line 7: 4jiEs6LRW S444 41,6
